add team pagination

--- a/index.html
+++ b/index.html
@@ -400,15 +400,13 @@
                 <div class="row">
                   <div class="col-md-12 text-center">
                     <!-- ============================== -->
+                   <div class="team-pagination">
+                   <!--  <input type="radio" id="btn-1" name="toggle">
+                    <input type="radio" id="btn-2" name="toggle">
+                    <input type="radio" id="btn-3" name="toggle"> -->
                     <div class="team-number">
                       <div class="team-number-img">
                         <img src="img/team-img1.jpg" class="img-responsive" alt="Ethanol">
-                        <div class="team-board">
-                          Imperdiet nulla sem fringilla,
-                          purus enim amet, nascetur
-                          faucibus, adipiscing neque
-                          ut bibendum, at felis nec in.
-                        </div>
                       </div>
                       <p class="team-name">
                         Maria Shara
@@ -432,12 +430,6 @@
                     <div class="team-number">
                       <div class="team-number-img">
                         <img src="img/team-img2.jpg" class="img-responsive" alt="Ethanol">
-                        <div class="team-board">
-                          Imperdiet nulla sem fringilla,
-                          purus enim amet, nascetur
-                          faucibus, adipiscing neque
-                          ut bibendum, at felis nec in.
-                        </div>
                       </div>
                       <p class="team-name">
                         Maria Shara
@@ -461,12 +453,6 @@
                     <div class="team-number">
                       <div class="team-number-img">
                         <img src="img/team-img1.jpg" class="img-responsive" alt="Ethanol">
-                        <div class="team-board">
-                          Imperdiet nulla sem fringilla,
-                          purus enim amet, nascetur
-                          faucibus, adipiscing neque
-                          ut bibendum, at felis nec in.
-                        </div>
                       </div>
                       <p class="team-name">
                         Maria Shara
@@ -487,10 +473,40 @@
                       </div>
                     </div>
                     <!-- ====================== -->
+                     
+                    <input type="radio" id="btn-1" name="run">
+                    <input type="radio" id="btn-2" name="run" checked>
+                    <input type="radio" id="btn-3" name="run">
+                   
+                   <div class="team-control">
+                      <label for="btn-1"></label>
+                      <label for="btn-2"></label>
+                      <label for="btn-3"></label>
+                    </div>
+                    <div class="team-boards">
+                       <div class="team-board board-position1">
+                          Imperdiet nulla sem fringilla,
+                          purus enim amet, nascetur
+                          faucibus, adipiscing neque
+                          ut bibendum, at felis nec in.
+                        </div> 
+                         <div class="team-board board-position2">
+                          Imperdiet nulla sem fringilla,
+                          purus enim amet, nascetur
+                          faucibus, adipiscing neque
+                          ut bibendum, at felis nec in.
+                        </div> 
+                         <div class="team-board board-position3">
+                          Imperdiet nulla sem fringilla,
+                          purus enim amet, nascetur
+                          faucibus, adipiscing neque
+                          ut bibendum, at felis nec in.
+                        </div>  
+                    </div>
+                    </div>
                   </div>
                 </div>
               </div>
-              input
             </div>
           </div>
         </div>
